--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
+    "@iconify/icons-mdi": "^1.2.6",
+    "@iconify/icons-ri": "^1.2.1",
+    "@iconify/svelte": "^2.2.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "rollup": "^2.3.4",
@@ -17,7 +20,5 @@
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^2.0.0",
     "svelte": "^3.0.0"
-  },
-  "dependencies": {
   }
 }
