--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^2.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-dnd-action": "^0.9.18"
+  },
+  "dependencies": {
+   
   }
 }
