--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/svelte": "^2.2.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@smui/fab": "^6.0.0-beta.16",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -23,5 +24,7 @@
     "svelte": "^3.0.0",
     "svelte-dnd-action": "^0.9.18"
   },
-  "dependencies": {}
+  "dependencies": {
+    "svelte-material-ui": "^6.0.0-beta.16"
+  }
 }
