--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "deploy": "cp -a public/. docs",
+    "deploy": "cp -a public/. docs"
   },
   "devDependencies": {
     "@iconify/icons-mdi": "^1.2.7",
