--- a/package.json
+++ b/package.json
@@ -2,30 +2,33 @@
   "name": "CRC-Cards",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "dev": "vite dev --open",
+    "build": "vite build",
+    "preview": "vite preview",
     "deploy": "cp -a public/. docs"
   },
   "devDependencies": {
     "@iconify/icons-mdi": "^1.2.7",
     "@iconify/icons-ri": "^1.2.1",
-    "@iconify/svelte": "^2.2.1",
+    "@iconify/svelte": "^4.2.0",
     "@material/typography": "^13.0.0",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@smui/fab": "^6.0.0-beta.16",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sirv-cli": "^2.0.0",
-    "svelte": "^3.0.0",
-    "svelte-dnd-action": "^0.9.18"
+    "@smui/checkbox": "^8.0.0-beta.3",
+    "@smui/fab": "^8.0.0-beta.3",
+    "@smui/form-field": "^8.0.0-beta.3",
+    "@smui/icon-button": "^8.0.0-beta.3",
+    "@smui/top-app-bar": "^8.0.0-beta.3",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "svelte": "^5.19.0",
+    "svelte-dnd-action": "^0.9.57",
+    "vite": "^6.2.0"
   },
   "dependencies": {
-    "svelte-material-ui": "^6.0.0-beta.16"
+    "@smui/common": "^8.0.0-beta.3",
+    "@smui/ripple": "^8.0.0-beta.3",
+    "@supabase/supabase-js": "^2.48.1",
+    "@sveltejs/adapter-static": "^3.0.8",
+    "svelte-material-ui": "^8.0.0-beta.3"
   }
 }
