--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/icons-ri": "^1.2.1",
     "@iconify/svelte": "^4.2.0",
     "@material/typography": "^13.0.0",
+    "@mdi/js": "^7.4.47",
     "@smui/checkbox": "^8.0.0-beta.3",
     "@smui/fab": "^8.0.0-beta.3",
     "@smui/form-field": "^8.0.0-beta.3",
