--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@smui/ripple": "^8.0.0-beta.3",
     "@supabase/supabase-js": "^2.48.1",
     "@sveltejs/adapter-static": "^3.0.8",
+    "jwt-decode": "^4.0.0",
     "svelte-material-ui": "^8.0.0-beta.3"
   }
 }
