--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-        run: npm run build 
+        run: npm run build && ls dist
 
       - name: Upload static files as artifact
         id: deployment
