--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build the project
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_KEY }}
         run: npm run build -- --base=/CRC-cards/ && ls dist
 
       - name: Upload static files as artifact
