--- a/.github/workflows/keep-supabase-alive-curl.yml
+++ b/.github/workflows/keep-supabase-alive-curl.yml
@@ -1,8 +1,8 @@
 name: Daily Curl Command
 
 on:
-  schedule:
-    - cron: '0 */8 * * *'  # This runs the action every 4 hours
+  #schedule:
+   # - cron: '0 */8 * * *'  # This runs the action every 4 hours
   workflow_dispatch: 
     
 jobs:
@@ -13,4 +13,5 @@ jobs:
       - name: Ping Supabase with SELECT to keep it alive
         run: |
           curl -s -H "apikey: ${{ secrets.SUPABASE_KEY }}" -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY }}" "${{ secrets.SUPABASE_URL }}/rest/v1/cards?select=id&limit=1"
+
 
